test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Fri, 01 Aug 2025 05:15:51 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="2/Ap0B5CRdPLExAaF/p4oB4f79T1KVIb", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}